测试提交结果

--- a/博士小论文代码/MetaAF.ipynb
+++ b/博士小论文代码/MetaAF.ipynb
@@ -26,6 +26,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 制作数据集\n",
+    "\n",
+    "When you make a metaaf dataset, you write a vanilla pytorch dataset. The dataset should not use jax and must return a dictionary with the keys \"signals\" and \"metadata\". We enforce this format since the \"signals\" are automatically segmented and buffered. In this example, we make a simple system identification dataset which returns signals but not metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
