添加和删除数据集

--- a/博士小论文代码/pyroomacoustics_demo.ipynb
+++ b/博士小论文代码/pyroomacoustics_demo.ipynb
@@ -479,66 +479,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9999999999997587"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset contains 0 samples.\n",
+      "Metadata attributes are:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/liang/miniconda3/envs/pyannote/lib/python3.8/site-packages/pyroomacoustics/datasets/cmu_arctic.py:152: RuntimeWarning: Some invalid speakers were removed from the list.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
-    "import pystoi\n",
+    "import pyroomacoustics as pra\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "def stoi(out_sig, target_sig, fs=16000):\n",
-    "    min_len = min(len(out_sig), len(target_sig))\n",
-    "    out_sig, target_sig = out_sig[:min_len], target_sig[:min_len]\n",
+    "corpus = pra.datasets.CMUArcticCorpus(download=True, speaker=['bd1'])\n",
     "\n",
-    "    return pystoi.stoi(target_sig, out_sig, fs)\n",
-    "\n",
-    "sig_stoi = stoi(signal_out,signal_1, fs_1)\n",
-    "\n",
-    "sig_stoi"
+    "print(corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import haiku as hk\n",
-    "\n",
-    "import metaaf"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of sentences containing \"what\": 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://download.tensorflow.org/data/speech_commands_v0.01.tar.gz into ./google_speech_commands ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/liang/miniconda3/envs/pyannote/lib/python3.8/site-packages/pyroomacoustics/datasets/google_speech_commands.py:199: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "  fs, data = wavfile.read(path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset contains 306 samples.\n",
+      "Metadata attributes are:\n",
+      "  word (31) :\n",
+      "      * dog occurs 10 times\n",
+      "      * up occurs 10 times\n",
+      "      * eight occurs 10 times\n",
+      "      ...\n",
+      "      * marvin occurs 10 times\n",
+      "      * two occurs 10 times\n",
+      "      * six occurs 10 times\n",
+      "  speech (2) :\n",
+      "      * True occurs 300 times\n",
+      "      * False occurs 6 times\n",
+      "  file_loc (306) :\n",
+      "      * ./google_speech_commands/dog/063d48cf_nohash_0.wav occurs 1 times\n",
+      "      * ./google_speech_commands/dog/ef2a3cfb_nohash_0.wav occurs 1 times\n",
+      "      * ./google_speech_commands/dog/ec7d1151_nohash_2.wav occurs 1 times\n",
+      "      ...\n",
+      "      * ./google_speech_commands/dog/8d4cdc60_nohash_0.wav occurs 1 times\n",
+      "      * ./google_speech_commands/dog/8442ea62_nohash_1.wav occurs 1 times\n",
+      "      * ./google_speech_commands/dog/7846fd85_nohash_0.wav occurs 1 times\n",
+      "  noise_type (6) :\n",
+      "      * doing_the_dishes occurs 1 times\n",
+      "      * pink_noise occurs 1 times\n",
+      "      * dude_miaowing occurs 1 times\n",
+      "      * running_tap occurs 1 times\n",
+      "      * exercise_bike occurs 1 times\n",
+      "      * white_noise occurs 1 times\n",
+      "The first 10 / 306 samples:\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/063d48cf_nohash_0.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/ef2a3cfb_nohash_0.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/ec7d1151_nohash_2.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/8d4cdc60_nohash_0.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/8442ea62_nohash_1.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/7846fd85_nohash_0.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/a9b574b3_nohash_1.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/541e4079_nohash_0.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/72d75d96_nohash_1.wav\n",
+      "speech: True; word: dog; file_loc: ./google_speech_commands/dog/cb164eea_nohash_1.wav\n",
+      "All sounds in the dataset:\n",
+      "['dog', 'up', 'eight', 'marvin', 'two', 'six', 'happy', 'four', 'right', 'off', 'wow', 'seven', 'left', 'five', 'stop', 'house', 'bird', '_background_noise_', 'three', 'on', 'tree', 'yes', 'no', 'go', 'down', 'zero', 'cat', 'one', 'bed', 'nine', 'sheila']\n",
+      "Dataset exists! Using ./google_speech_commands\n",
+      "Number of 'yes' samples : 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## 构造数据集\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pyroomacoustics as pra\n",
     "\n",
-    "通过Pytorch的`dataset`方法构造`metaaf`的数据集。\n",
+    "# The dataset is automatically downloaded if not available and 10 of each word is selected\n",
+    "dataset = pra.datasets.GoogleSpeechCommands(download=True, subset=10, seed=0)\n",
     "\n",
-    "**注意：**数据集不能使用`jax`"
+    "# print dataset info, first 10 entries, and all sounds\n",
+    "print(dataset)\n",
+    "dataset.head(n=10)\n",
+    "print(\"All sounds in the dataset:\")\n",
+    "print(dataset.classes)\n",
+    "\n",
+    "# filter by specific word\n",
+    "selected_word = 'yes'\n",
+    "matches = dataset.filter(word=selected_word)\n",
+    "print(\"Number of '%s' samples : %d\" % (selected_word, len(matches)))\n",
+    "\n",
+    "# if the sounddevice package is available, we can play the sample\n",
+    "# matches[0].play()\n",
+    "\n",
+    "# show the spectrogram\n",
+    "plt.figure()\n",
+    "# matches[0].plot()\n",
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('pyannote')",
    "language": "python",
    "name": "python3"
   },
@@ -552,12 +655,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a663d525a294a75b868378a51d8db00740236484748f17e7fef628dae424325b"
+    "hash": "2d594fd508d597f03413454a5debcd2763e6e14ea1f236a88a7b0725c19d0df1"
    }
   }
  },
