--- a/博士小论文代码/pyannote-audio_demo/appying_a_pipline.ipynb
+++ b/博士小论文代码/pyannote-audio_demo/appying_a_pipline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一、Applying a pretrained pipeline（流水线条）\n",
+    "## 三、Applying a pretrained pipeline（流水线条）\n",
     "\n",
     "在本教程中，介绍如何对一个音频文件使用 `pyannote.audio` pipeline。\n",
     "\n",
