MODE:多目标差分进化算法

--- a/Spafe_demo/gammatone_fbanks.ipynb
+++ b/Spafe_demo/gammatone_fbanks.ipynb
@@ -159,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pyannote')",
+   "display_name": "Python 3.8.13 ('ML_ANC')",
    "language": "python",
    "name": "python3"
   },
@@ -178,7 +178,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2d594fd508d597f03413454a5debcd2763e6e14ea1f236a88a7b0725c19d0df1"
+    "hash": "fceebbce8eb2261450aba5e48f14c5ff71217e980afebe05bfcb29e9035c5af0"
    }
   }
  },
