--- a/Pytorch学习/深度学习计算基础.ipynb
+++ b/Pytorch学习/深度学习计算基础.ipynb
@@ -647,7 +647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.8.13 ('ML_ANC')",
    "language": "python",
    "name": "python3"
   },
@@ -661,12 +661,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a663d525a294a75b868378a51d8db00740236484748f17e7fef628dae424325b"
+    "hash": "fceebbce8eb2261450aba5e48f14c5ff71217e980afebe05bfcb29e9035c5af0"
    }
   }
  },
