--- a/Pyroomacoustics_demo/Dataset Wrappers Demo.ipynb
+++ b/Pyroomacoustics_demo/Dataset Wrappers Demo.ipynb
@@ -339,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pyannote')",
+   "display_name": "Python 3.8.13 ('ANC')",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +358,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2d594fd508d597f03413454a5debcd2763e6e14ea1f236a88a7b0725c19d0df1"
+    "hash": "a6ce3b3976953dfed750c8eae14e0a8336bbd28342123e9e1a9df68c78125855"
    }
   }
  },
