--- a/Pyroomacoustics_demo/Pra_test.ipynb
+++ b/Pyroomacoustics_demo/Pra_test.ipynb
@@ -247,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "下面设置一个带有降噪的房间仿真"
+    "### 下面为单输入但输出 (SISO) ANC 的代码设计"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,6 +501,89 @@
    ],
    "source": [
     "IPython.display.Audio(room_d.mic_array.signals[4,:], rate=fs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 下面设计多输入多输出 (MIMO) 的 ANC 设计"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 下面通过 pyroom 一个降噪麦克风的例子，成功！！！！！！！！！！！！！！！！\n",
+    "\n",
+    "# 原始噪声信号\n",
+    "fs, signal = wavfile.read(\"google_speech_commands/_background_noise_/pink_noise.wav\")\n",
+    "\n",
+    "# 将信号缩短为 50000\n",
+    "signal = signal[0:50000]\n",
+    "\n",
+    "# 创建房间的节点\n",
+    "corners = np.array([[0, 0], [0, 1.1], [2.2, 1.1], [2.2, 0]]).T\n",
+    "\n",
+    "# 创建房间的节点\n",
+    "corners = np.array([[0, 0], [0, 1.1], [2.2, 1.1], [2.2, 0]]).T\n",
+    "\n",
+    "# 向房间中添加信号源，首先构造一个 2D 房间，并设置房间的频率属性、ray_tracing、空气吸收率 (air_absorption)，最大阶数 (max_order)、材料 (materials) 参数进行设置，并生成新的 2D 房间 room 对象：\n",
+    "room = pra.Room.from_corners(corners, fs=fs, ray_tracing=True, max_order=3, materials=pra.Material(0.2, 0.15))\n",
+    "\n",
+    "# 设置 ray_tracing 参数：接收半径 (receiver_radius)、n_ray、energy_thres\n",
+    "room.set_ray_tracing(receiver_radius=0.5, n_rays=10000, energy_thres=1e-5)\n",
+    "\n",
+    "# 使用 add_sorce() 方法在 [0.02, 0.55] 处添加信号源头 signal\n",
+    "room.add_source([0.02, 0.55], signal=signal)\n",
+    "\n",
+    "# 在房间内部添加五个信号监测点： []\n",
+    "E = np.array([[0.3, 1.9, 1.1, 0.3, 1.9], [0.2, 0.2, 0.55, 0.9, 0.9]])\n",
+    "room.add_microphone(E)\n",
+    "\n",
+    "# 绘制房间\n",
+    "# fig, ax = room_d.plot()\n",
+    "\n",
+    "# 对房间进行仿真\n",
+    "room.image_source_model()\n",
+    "room.simulate()\n",
+    "\n",
+    "\n",
+    "##### 下面进行降噪算法设计 #####\n",
+    "# 设计降噪声源信号\n",
+    "length = 15         # 滤波器长度\n",
+    "\n",
+    "# 设置滤波器参数，与 SISO 不同，这里设置的滤波器参数的维度为 5 * 15，其中 5 表示\n",
+    "w = np.random.randn(length)     # 滤波器参数\n",
+    "w /= np.linalg.norm(w)          # 对滤波器参数进行范数正则化处理\n",
+    "\n",
+    "adfilt_nlms = dict(\n",
+    "        filter = pra.adaptive.NLMS(length, mu=0.5),\n",
+    "        error = np.zeros(50000),\n",
+    "    )\n",
+    "\n",
+    "for i in range(50000):\n",
+    "    adfilt_nlms['filter'].update(signal[i], room.mic_array.signals[0,i])\n",
+    "    adfilt_nlms['error'][i] = np.linalg.norm(adfilt_nlms['filter'].w - w)\n",
+    "\n",
+    "# 降噪信号\n",
+    "d_signal = fftconvolve(signal, adfilt_nlms['filter'].w)[:50000]\n",
+    "\n",
+    "room_d = pra.Room.from_corners(corners, fs=fs, ray_tracing=True, max_order=3, materials=pra.Material(0.2, 0.15))\n",
+    "\n",
+    "# 设置 ray_tracing 参数：接收半径 (receiver_radius)、n_ray、energy_thres\n",
+    "room_d.set_ray_tracing(receiver_radius=0.5, n_rays=10000, energy_thres=1e-5)\n",
+    "\n",
+    "room_d.add_source([0.02, 0.55], signal=signal)\n",
+    "room_d.add_source([2.18, 0.55], signal=d_signal)\n",
+    "\n",
+    "E = np.array([[0.3, 1.9, 1.1, 0.3, 1.9], [0.2, 0.2, 0.55, 0.9, 0.9]])\n",
+    "room_d.add_microphone(E)\n",
+    "\n",
+    "room_d.image_source_model()\n",
+    "room_d.simulate()"
    ]
   },
   {
