--- a/Pyroomacoustics_demo/ANC_MIMO_GA.ipynb
+++ b/Pyroomacoustics_demo/ANC_MIMO_GA.ipynb
@@ -479,12 +479,16 @@
     "\n",
     "    def _evaluate(self, x, out, *args, **kwargs):\n",
     "\n",
-    "        f1 = \n",
+    "        # 得到五个误差麦克风处的信号\n",
+    "        E_mic1, E_mic2, E_mic3, E_mic4, E_mic5 = self.ANC_model(x)\n",
+    "        \n",
+    "        # 这里只需要将五个麦克风的信号作为目标函数即可，即使得五个误差麦克风处的噪声最小\n",
+    "        f1 = E_mic1\n",
+    "        f2 = E_mic2\n",
+    "        f3 = E_mic3\n",
+    "        f4 = E_mic4\n",
+    "        f5 = E_mic5\n",
     "        f1 = [room.mic_array.signals[i]-fftconvolve(room.mic_array.signals[i], x[0:15]) for i in range(5)]\n",
-    "        f2 = room.mic_array.signals[1]\n",
-    "        f3 = room.mic_array.signals[2]\n",
-    "        f3 = room.mic_array.signals[3]\n",
-    "        f4 = room.mic_array.signals[4]\n",
     "\n",
     "    def ANC_model(self, w):\n",
     "        # 原始噪声信号\n",
@@ -508,18 +512,50 @@
     "            room.image_source_model()\n",
     "            room.simulate()\n",
     "            \n",
-    "            # 在四个消噪声的地方添加噪声信号源头\n",
-    "            ANM_1 = fftconvolve()\n",
+    "            # 在四个消噪声的地方添加噪声信号源头 ANM1, ANM2, ANM3, ANM4 (ANM, Anti-Noise Microphone)\n",
+    "            # 下面对每个误差麦克风信号进行卷积？还是对输入信号进行卷积？？？另外还需要搞清楚 fftconvolve() 输出的维度\n",
+    "            ANM_1 = fftconvolve(signal[i], w[0:15])\n",
+    "            ANM_2 = fftconvolve(signal[i], w[15:30])\n",
+    "            ANM_3 = fftconvolve(signal[i], w[30:45])\n",
+    "            ANM_4 = fftconvolve(signal[i], w[45:60])\n",
+    "            \n",
     "            # 添加了信号源后执行一次仿真\n",
+    "            room.add_source([0.02, 1.08], signal=ANM_1)\n",
+    "            room.add_source([2.18, 1.08], signal=ANM_2)\n",
+    "            room.add_source([2.18, 0.02], signal=ANM_3)\n",
+    "            room.add_source([0.02, 0.02], signal=ANM_4)\n",
+    "            \n",
+    "            \n",
+    "        # 返回五个误差麦克风的信号\n",
+    "        return room.mic_array.signals[0], room.mic_array.signals[1], room.mic_array.signals[2], room.mic_array.signals[3], room.mic_array.signals[4]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29]\n",
+      "[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44]\n",
+      "[45 46 47 48 49 50 51 52 53 54 55 56 57 58 59]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array(range(10))\n",
+    "b = np.array(range(20))\n",
     "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "        \n",
-    "\n",
-    "        # 仿真\n",
-    "        room.image_source_model()\n",
-    "        room.simulate()"
+    "temp = fftconvolve(b, a)\n",
+    "a = np.array(range(60))\n",
+    "print(a[0:15])\n",
+    "print(a[15:30])\n",
+    "print(a[30:45])\n",
+    "print(a[45:60])\n"
    ]
   },
   {
