--- a/Pyroomacoustics_demo/ANC_MIMO_GA.ipynb
+++ b/Pyroomacoustics_demo/ANC_MIMO_GA.ipynb
@@ -456,12 +456,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "下面以 pymoo 构建多目标优化模型，以实现多目标优化。"
+    "下面以 pymoo 构建多目标优化模型，以实现多目标优化。\n",
+    "参考：[利用Python进行地下水模拟（11）-多目标优化问题 - 知乎](https://zhuanlan.zhihu.com/p/532472518)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,8 @@
     "            room.add_source([2.18, 1.08], signal=ANM_2)\n",
     "            room.add_source([2.18, 0.02], signal=ANM_3)\n",
     "            room.add_source([0.02, 0.02], signal=ANM_4)\n",
-    "            \n",
+    "            room.image_source_model()\n",
+    "            room.simulate()\n",
     "            \n",
     "        # 返回五个误差麦克风的信号\n",
     "        return room.mic_array.signals[0], room.mic_array.signals[1], room.mic_array.signals[2], room.mic_array.signals[3], room.mic_array.signals[4]\n"
